--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -691,6 +691,7 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="js/request.js"></script>
 <script>
+    console.log("sardor")
     // DOM Elements
     const loginForm = document.getElementById('loginForm');
     const registerForm = document.getElementById('registerForm');
