employee parts are done

--- a/src/main/resources/static/adminpage.html
+++ b/src/main/resources/static/adminpage.html
@@ -538,7 +538,7 @@
                     <a class="nav-link" data-bs-toggle="collapse" href="#employeesMenu" role="button"><i class="bi bi-briefcase"></i> Employees</a>
                     <ul class="collapse nav flex-column ms-3" id="employeesMenu">
                         <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('operators.html')">Operators</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('delivery-servants.html')">Delivery Servants</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('delivery.html')">Delivery Servants</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -561,13 +561,12 @@
                             <span id="usernameDisplay">Username</span>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                            <li><a class="dropdown-item" href="#" onclick="loadIframe('products.html')"><i class="bi bi-box"></i> Products</a></li>
-                            <li><a class="dropdown-item" href="#" onclick="loadIframe('orders.html')"><i class="bi bi-cart"></i> Orders</a></li>
+
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item text-danger" href="#" id="logoutDropdownBtn"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
+                            <li><a class="dropdown-item text-danger" href="#" id="logoutBtn"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
                         </ul>
                     </div>
-                    <button class="btn btn-primary ms-3" id="logoutBtn">Logout</button>
+
                 </div>
             </header>
 
