--- a/src/main/resources/static/operators.html
+++ b/src/main/resources/static/operators.html
@@ -588,6 +588,45 @@
         .card-header-actions .btn {
             margin-left: 10px;
         }
+
+        /* Pagination styling */
+        .pagination {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .pagination .page-item .page-link {
+            color: var(--dark-color);
+            border-radius: 8px;
+            margin: 0 3px;
+            border: 1px solid #ddd;
+            transition: all var(--transition-speed);
+        }
+
+        .pagination .page-item.active .page-link {
+            background-color: var(--primary-color);
+            border-color: var(--primary-color);
+            color: white;
+        }
+
+        .pagination .page-item .page-link:hover {
+            background-color: var(--light-color);
+            border-color: var(--primary-color);
+            color: var(--dark-color);
+        }
+
+        .pagination .page-item.disabled .page-link {
+            color: #aaa;
+            pointer-events: none;
+        }
+
+        .pagination-info {
+            text-align: center;
+            margin-top: 10px;
+            color: #666;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
@@ -626,6 +665,9 @@
                         <i class="bi bi-search"></i>
                     </span>
                     <input type="text" id="searchInput" class="form-control" placeholder="Search operators...">
+                    <button class="btn btn-primary" type="button" id="searchButton">
+                        <i class="bi bi-search me-1"></i> Search
+                    </button>
                 </div>
             </div>
 
@@ -647,6 +689,18 @@
                     <!-- User data will be loaded here -->
                     </tbody>
                 </table>
+            </div>
+
+            <!-- Pagination -->
+            <div class="pagination-container">
+                <div class="pagination-info" id="paginationInfo">
+                    Showing <span id="startItem">0</span> to <span id="endItem">0</span> of <span id="totalItems">0</span> operators
+                </div>
+                <nav aria-label="Page navigation">
+                    <ul class="pagination" id="pagination">
+                        <!-- Pagination will be generated here -->
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
@@ -818,6 +872,10 @@
 <script>
     let usersTable = document.getElementById('usersTable');
     let users = [];
+    let currentPage = 1;
+    let itemsPerPage = 10;
+    let filteredUsers = [];
+    let searchTerm = '';
 
     // Initialize Select2 for role dropdowns
     $(document).ready(function() {
@@ -837,6 +895,22 @@
 
         // Load users when page loads
         loadUser();
+
+        // Add event listener for search button
+        document.getElementById('searchButton').addEventListener('click', function() {
+            searchTerm = document.getElementById('searchInput').value.toLowerCase();
+            currentPage = 1; // Reset to first page on new search
+            filterUsers(searchTerm);
+        });
+
+        // Add event listener for search input (search as you type)
+        document.getElementById('searchInput').addEventListener('keyup', function(event) {
+            if (event.key === 'Enter') {
+                searchTerm = this.value.toLowerCase();
+                currentPage = 1; // Reset to first page on new search
+                filterUsers(searchTerm);
+            }
+        });
     });
 
     // Load users from the backend
@@ -853,9 +927,11 @@
             .then((res) => {
                 // Store the users data
                 users = res.data;
+                filteredUsers = [...users]; // Initialize filtered users with all users
 
-                // Draw the users in the table
-                draw();
+                // Apply pagination and draw the table
+                updatePagination();
+                drawPaginatedUsers();
             })
             .catch((error) => {
                 console.error('Error loading users:', error);
@@ -868,23 +944,30 @@
             });
     }
 
-    // Draw users in the table
-    function draw() {
+    // Draw paginated users in the table
+    function drawPaginatedUsers() {
         const tbody = usersTable.querySelector('tbody');
 
         // Clear the table
         tbody.innerHTML = '';
 
-        // Check if users array is empty
-        if (users.length === 0) {
+        // Check if filtered users array is empty
+        if (filteredUsers.length === 0) {
             tbody.innerHTML = '<tr><td colspan="7" class="text-center">No users found</td></tr>';
+            updatePaginationInfo(0, 0, 0);
             return;
         }
 
-        // Add each user to the table
-        users.forEach(user => {
-            const tr = document.createElement('tr');
+        // Calculate start and end index for current page
+        const startIndex = (currentPage - 1) * itemsPerPage;
+        const endIndex = Math.min(startIndex + itemsPerPage, filteredUsers.length);
 
+        // Get current page data
+        const currentPageData = filteredUsers.slice(startIndex, endIndex);
+
+        // Add each user to the table
+        currentPageData.forEach(user => {
+            const tr = document.createElement('tr');
 
             let rolesHtml = 'No roles';
             if (user.roles && Array.isArray(user.roles) && user.roles.length > 0) {
@@ -908,83 +991,142 @@
                     </td>
                 `;
 
-
             tbody.appendChild(tr);
         });
+
+        // Update pagination info
+        updatePaginationInfo(startIndex + 1, endIndex, filteredUsers.length);
+    }
+
+    // Update pagination information text
+    function updatePaginationInfo(start, end, total) {
+        document.getElementById('startItem').textContent = start;
+        document.getElementById('endItem').textContent = end;
+        document.getElementById('totalItems').textContent = total;
+    }
+
+    // Generate pagination controls
+    function updatePagination() {
+        const totalPages = Math.ceil(filteredUsers.length / itemsPerPage);
+        const paginationElement = document.getElementById('pagination');
+
+        // Clear pagination
+        paginationElement.innerHTML = '';
+
+        // Previous button
+        const prevLi = document.createElement('li');
+        prevLi.className = `page-item ${currentPage === 1 ? 'disabled' : ''}`;
+        prevLi.innerHTML = `
+            <a class="page-link" href="#" aria-label="Previous" ${currentPage > 1 ? `onclick="changePage(${currentPage - 1}); return false;"` : ''}>
+                <span aria-hidden="true">&laquo;</span>
+            </a>
+        `;
+        paginationElement.appendChild(prevLi);
+
+        // Page numbers
+        const maxVisiblePages = 5;
+        let startPage = Math.max(1, currentPage - Math.floor(maxVisiblePages / 2));
+        let endPage = Math.min(totalPages, startPage + maxVisiblePages - 1);
+
+        if (endPage - startPage + 1 < maxVisiblePages) {
+            startPage = Math.max(1, endPage - maxVisiblePages + 1);
+        }
+
+        // First page
+        if (startPage > 1) {
+            const firstLi = document.createElement('li');
+            firstLi.className = 'page-item';
+            firstLi.innerHTML = `
+                <a class="page-link" href="#" onclick="changePage(1); return false;">1</a>
+            `;
+            paginationElement.appendChild(firstLi);
+
+            // Ellipsis after first page if needed
+            if (startPage > 2) {
+                const ellipsisLi = document.createElement('li');
+                ellipsisLi.className = 'page-item disabled';
+                ellipsisLi.innerHTML = `
+                    <a class="page-link" href="#">...</a>
+                `;
+                paginationElement.appendChild(ellipsisLi);
+            }
+        }
+
+        // Page numbers
+        for (let i = startPage; i <= endPage; i++) {
+            const pageLi = document.createElement('li');
+            pageLi.className = `page-item ${i === currentPage ? 'active' : ''}`;
+            pageLi.innerHTML = `
+                <a class="page-link" href="#" onclick="changePage(${i}); return false;">${i}</a>
+            `;
+            paginationElement.appendChild(pageLi);
+        }
+
+        // Last page
+        if (endPage < totalPages) {
+            // Ellipsis before last page if needed
+            if (endPage < totalPages - 1) {
+                const ellipsisLi = document.createElement('li');
+                ellipsisLi.className = 'page-item disabled';
+                ellipsisLi.innerHTML = `
+                    <a class="page-link" href="#">...</a>
+                `;
+                paginationElement.appendChild(ellipsisLi);
+            }
+
+            const lastLi = document.createElement('li');
+            lastLi.className = 'page-item';
+            lastLi.innerHTML = `
+                <a class="page-link" href="#" onclick="changePage(${totalPages}); return false;">${totalPages}</a>
+            `;
+            paginationElement.appendChild(lastLi);
+        }
+
+        // Next button
+        const nextLi = document.createElement('li');
+        nextLi.className = `page-item ${currentPage === totalPages || totalPages === 0 ? 'disabled' : ''}`;
+        nextLi.innerHTML = `
+            <a class="page-link" href="#" aria-label="Next" ${currentPage < totalPages ? `onclick="changePage(${currentPage + 1}); return false;"` : ''}>
+                <span aria-hidden="true">&raquo;</span>
+            </a>
+        `;
+        paginationElement.appendChild(nextLi);
+    }
+
+    // Change page
+    function changePage(page) {
+        currentPage = page;
+        drawPaginatedUsers();
+        updatePagination();
+
+        // Scroll to top of table
+        usersTable.scrollIntoView({ behavior: 'smooth' });
     }
 
     // Search functionality
-    document.getElementById('searchInput').addEventListener('keyup', function() {
-        const searchTerm = this.value.toLowerCase();
-        filterUsers(searchTerm);
-    });
-
     function filterUsers(searchTerm) {
         if (!searchTerm) {
             // If search is empty, show all users
-            draw();
-            return;
+            filteredUsers = [...users];
+        } else {
+            // Filter the users array based on search term
+            filteredUsers = users.filter(user => {
+                return (
+                    (user.username && user.username.toLowerCase().includes(searchTerm)) ||
+                    (user.email && user.email.toLowerCase().includes(searchTerm)) ||
+                    (user.phone && user.phone.toLowerCase().includes(searchTerm)) ||
+                    (user.vehicleNumber && user.vehicleNumber.toLowerCase().includes(searchTerm))
+                );
+            });
         }
 
-        // Filter the users array based on search term
-        const filteredUsers = users.filter(user => {
-            return (
-                (user.username && user.username.toLowerCase().includes(searchTerm)) ||
-                (user.email && user.email.toLowerCase().includes(searchTerm)) ||
-                (user.phone && user.phone.toLowerCase().includes(searchTerm)) ||
-                (user.vehicleNumber && user.vehicleNumber.toLowerCase().includes(searchTerm))
-            );
-        });
-
-        // Draw the filtered users
-        drawFilteredUsers(filteredUsers);
+        // Reset to first page and update display
+        currentPage = 1;
+        updatePagination();
+        drawPaginatedUsers();
     }
-
-    function drawFilteredUsers(filteredUsers) {
-        const tbody = usersTable.querySelector('tbody');
-
-        // Clear the table
-        tbody.innerHTML = '';
-
-        // Check if filtered array is empty
-        if (filteredUsers.length === 0) {
-            tbody.innerHTML = '<tr><td colspan="7" class="text-center">No matching users found</td></tr>';
-            return;
-        }
-
-        // Add each filtered user to the table
-        filteredUsers.forEach(user => {
-            const tr = document.createElement('tr');
-
-            let rolesHtml = 'No roles';
-            if (user.roles && Array.isArray(user.roles) && user.roles.length > 0) {
-                rolesHtml = user.roles.map(role =>
-                    `<span class="badge-role">${role.roleName || role.name || 'Unknown'}</span>`
-                ).join(' ');
-            }
-
-            // Create table cells for user data
-            tr.innerHTML = `
-                <td>${user.id}</td>
-                <td>${user.username}</td>
-                <td>${user.email}</td>
-                <td>${user.phone || '-'}</td>
-                <td>${user.vehicleNumber || '-'}</td>
-                <td>${rolesHtml}</td>
-                <td>
-                    <button class="action-btn action-btn-edit" onclick="openEditUserModal(${user.id})">
-                        <i class="bi bi-pencil"></i>
-                    </button>
-                </td>
-            `;
-
-            tbody.appendChild(tr);
-        });
-    }
-
 
     function openEditUserModal(userId) {
-
         const user = users.find(u => u.id === userId);
 
         if (!user) {
@@ -992,14 +1134,9 @@
             return;
         }
 
-
         document.getElementById('editUserId').value = user.id;
-
-
         document.getElementById('displayUsername').textContent = user.username;
         document.getElementById('displayEmail').textContent = user.email;
-
-
         document.getElementById('editUsername').value = user.username;
         document.getElementById('editEmail').value = user.email;
         document.getElementById('editPhone').value = user.phone || '';
@@ -1021,11 +1158,9 @@
             return;
         }
 
-
         const updateBtn = document.getElementById('updateBtn');
         updateBtn.innerHTML = '<span class="loading-spinner"></span> Updating...';
         updateBtn.classList.add('btn-loading');
-
 
         const userData = {
             username: username,
@@ -1045,8 +1180,17 @@
                     users[userIndex].username = username;
                     users[userIndex].email = email;
                     users[userIndex].phone = phone;
+
+                    // Update filtered users as well
+                    const filteredIndex = filteredUsers.findIndex(u => u.id === parseInt(userId));
+                    if (filteredIndex !== -1) {
+                        filteredUsers[filteredIndex].username = username;
+                        filteredUsers[filteredIndex].email = email;
+                        filteredUsers[filteredIndex].phone = phone;
+                    }
+
                     // Redraw the table with updated data
-                    draw();
+                    drawPaginatedUsers();
                 }
 
                 // Close the modal
@@ -1074,7 +1218,7 @@
         const confirmPassword = document.getElementById('confirmPassword').value;
         const phone = document.getElementById('phone').value.trim();
 
-        if (!username || !email || !password||!phone) {
+        if (!username || !email || !password || !phone) {
             showAlert('error', 'Please fill all required fields');
             return;
         }
@@ -1088,14 +1232,11 @@
         submitBtn.innerHTML = '<span class="loading-spinner"></span> Creating...';
         submitBtn.classList.add('btn-loading');
 
-
-
         const userData = {
             username: username,
             email: email,
             password: password,
             phone: phone,
-
         };
 
         request({
@@ -1106,13 +1247,14 @@
             console.log("User created successfully:", res.data);
             if (res.data) {
                 users.push(res.data);
-                draw();
-                loadUser();
+                filteredUsers = [...users]; // Update filtered users
+
+                // Refresh pagination and table
+                updatePagination();
+                drawPaginatedUsers();
             }
 
-
             document.getElementById('addUserForm').reset();
-
 
             const addModalElement = document.getElementById('addUserModal');
             if (addModalElement) {
@@ -1120,12 +1262,7 @@
                 addModal.hide();
             }
 
-
             showAlert('success', 'User created successfully');
-
-            setTimeout(() => {
-                window.location.reload();
-            }, 500);
         })
             .catch((error) => {
                 console.error('Error creating user:', error);
@@ -1138,10 +1275,7 @@
                 submitBtn.innerHTML = '<i class="bi bi-person-plus me-2"></i>Add User';
                 submitBtn.classList.remove('btn-loading');
             });
-
-
     }
-
 
     document.getElementById('togglePassword').addEventListener('click', function() {
         const passwordInput = document.getElementById('password');
@@ -1173,10 +1307,6 @@
             }, 5000);
         }
     }
-    document.addEventListener('DOMContentLoaded', function() {
-        loadUser();
-    });
 </script>
 </body>
 </html>
-
