i add orders part to adminpage

--- a/src/main/resources/static/adminpage.html
+++ b/src/main/resources/static/adminpage.html
@@ -509,9 +509,9 @@
                 <li class="nav-item">
                     <a class="nav-link" data-bs-toggle="collapse" href="#ordersMenu" role="button"><i class="bi bi-cart"></i> Orders</a>
                     <ul class="collapse nav flex-column ms-3" id="ordersMenu">
-                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('new-orders.html')">New Orders</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('pending-orders.html')">Pending Orders</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('complete-orders.html')">Complete Orders</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('manageOrder.html')">Manage Orders</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('new-orders.html')">All Orders</a></li>
+
                     </ul>
                 </li>
                 <li class="nav-item">
