--- a/src/main/resources/static/delivery.html
+++ b/src/main/resources/static/delivery.html
@@ -1280,7 +1280,7 @@
 
         // Send update request to the server
         request({
-            url: `/admin/operator/${userId}/update-info`,
+            url: `/admin/delivery/${userId}/update-info`,
             method: 'PUT',
             data: userData
         })
