dashboard and delivery activeness is added

--- a/src/main/resources/static/delivery.html
+++ b/src/main/resources/static/delivery.html
@@ -757,12 +757,12 @@
                 <table id="usersTable" class="table table-striped table-hover">
                     <thead>
                     <tr>
-                        <th>ID</th>
+                        <th>№</th>
                         <th>Username</th>
                         <th>Email</th>
                         <th>Phone</th>
                         <th>Vehicle Number</th>
-                        <th>Roles</th>
+                        <th>Status</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
@@ -853,15 +853,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!--                    <div class="form-group">-->
-                    <!--                        <label for="roles" class="form-label">User Roles</label>-->
-                    <!--                        <select class="form-control" id="roles" name="roles" multiple="multiple" required>-->
-                    <!--                            <option value="ROLE_ADMIN">Admin</option>-->
-                    <!--                            <option value="ROLE_OPERATOR">Operator</option>-->
-                    <!--                        </select>-->
-                    <!--                        <div class="form-text">Select one or more roles for the user.</div>-->
-                    <!--                    </div>-->
                 </form>
             </div>
             <div class="modal-footer">
@@ -912,6 +903,15 @@
                         <label for="editVehicleNumber" class="form-label">Vehicle Number</label>
                         <input type="text" class="form-control" id="editVehicleNumber" name="editVehicleNumber">
                     </div>
+
+                    <!-- Add Active/Inactive Toggle -->
+                    <div class="form-group">
+                        <label class="form-label">Status</label>
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="editUserStatus">
+                            <label class="form-check-label" for="editUserStatus">Active</label>
+                        </div>
+                    </div>
                 </form>
             </div>
             <div class="modal-footer">
@@ -925,6 +925,7 @@
         </div>
     </div>
 </div>
+
 <!-- Delete User Confirmation Modal -->
 <div class="modal fade" id="deleteUserModal" tabindex="-1" aria-labelledby="deleteUserModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -1024,7 +1025,7 @@
     function loadUser() {
         // Show loading state in the table
         const tbody = usersTable.querySelector('tbody');
-        tbody.innerHTML = '<tr><td colspan="7" class="text-center">Loading users...</td></tr>';
+        tbody.innerHTML = '<tr><td colspan="8" class="text-center">Loading users...</td></tr>';
 
         // Fetch users from the backend using request function
         request({
@@ -1034,6 +1035,20 @@
             .then((res) => {
                 // Store the users data
                 users = res.data;
+
+                // Убедимся, что isActive правильно установлен для каждого пользователя
+                users = users.map(user => {
+                    // Если isOnline существует, используем его значение для isActive
+                    if (user.isOnline !== undefined) {
+                        user.isActive = user.isOnline;
+                    }
+                    // Если isActive не определен, установим его в false по умолчанию
+                    if (user.isActive === undefined) {
+                        user.isActive = false;
+                    }
+                    return user;
+                });
+
                 filteredUsers = [...users]; // Initialize filtered users with all users
 
                 // Apply pagination and draw the table
@@ -1044,64 +1059,55 @@
                 console.error('Error loading users:', error);
 
                 // Show error message in the table
-                tbody.innerHTML = '<tr><td colspan="7" class="text-center text-danger">Failed to load users. Please try again.</td></tr>';
+                tbody.innerHTML = '<tr><td colspan="8" class="text-center text-danger">Failed to load users. Please try again.</td></tr>';
 
                 // Show error alert
                 showAlert('error', 'Failed to load users. Please try again.');
             });
     }
 
-    // Draw paginated users in the table
     function drawPaginatedUsers() {
         const tbody = usersTable.querySelector('tbody');
-
-        // Clear the table
         tbody.innerHTML = '';
 
-        // Check if filtered users array is empty
         if (filteredUsers.length === 0) {
-            tbody.innerHTML = '<tr><td colspan="7" class="text-center">No users found</td></tr>';
+            tbody.innerHTML = '<tr><td colspan="8" class="text-center">No users found</td></tr>';
             updatePaginationInfo(0, 0, 0);
             return;
         }
 
-        // Calculate start and end index for current page
         const startIndex = (currentPage - 1) * itemsPerPage;
         const endIndex = Math.min(startIndex + itemsPerPage, filteredUsers.length);
-
-        // Get current page data
         const currentPageData = filteredUsers.slice(startIndex, endIndex);
 
-        // Add each user to the table
-        currentPageData.forEach(user => {
+        currentPageData.forEach((user, index) => {
             const tr = document.createElement('tr');
 
-            let rolesHtml = 'No roles';
-            if (user.roles && Array.isArray(user.roles) && user.roles.length > 0) {
-                rolesHtml = user.roles.map(role =>
-                    `<span class="badge-role">${role.roleName || role.name || 'Unknown'}</span>`
-                ).join(' ');
-            }
+            // Determine online status with colors - явно преобразуем в boolean
+            const isActive = user.isActive === true;
+            const statusText = isActive ? 'Active' : 'Inactive';
+            const statusClass = isActive ? 'text-success' : 'text-danger';
 
-            // Create table cells for user data
+            // Calculate the sequential number
+            const sequentialNumber = startIndex + index + 1;
+
             tr.innerHTML = `
-                    <td>${user.id}</td>
-                    <td>${user.username}</td>
-                    <td>${user.email}</td>
-                    <td>${user.phone || '-'}</td>
-                    <td>${user.vehicleNumber || '-'}</td>
-                    <td>${rolesHtml}</td>
-                    <td>
-                        <button class="action-btn action-btn-edit" onclick="openEditUserModal(${user.id})">
-                            <i class="bi bi-pencil"></i>
-                        </button>
-                    </td>
-                `;
+        <td>${sequentialNumber}</td>
+        <td>${user.username}</td>
+        <td>${user.email}</td>
+        <td>${user.phone || '-'}</td>
+        <td>${user.vehicleNumber || '-'}</td>
+        <td class="${statusClass}">${statusText}</td>
+        <td>
+            <button class="action-btn action-btn-edit" onclick="openEditUserModal(${user.id})">
+                <i class="bi bi-pencil"></i>
+            </button>
+        </td>
+    `;
 
             tbody.appendChild(tr);
         });
 
-        // Update pagination info
         updatePaginationInfo(startIndex + 1, endIndex, filteredUsers.length);
     }
 
@@ -1249,6 +1255,10 @@
         document.getElementById('editPhone').value = user.phone || '';
         document.getElementById('editVehicleNumber').value = user.vehicleNumber || '';
 
+        // Set the status toggle - явно преобразуем в boolean
+        const statusToggle = document.getElementById('editUserStatus');
+        statusToggle.checked = user.isActive === true;
+
         // Open the modal
         const editModal = new bootstrap.Modal(document.getElementById('editUserModal'));
         editModal.show();
@@ -1261,6 +1271,12 @@
         const phone = document.getElementById('editPhone').value.trim();
         const vehicleNumber = document.getElementById('editVehicleNumber').value.trim();
 
+        // Получаем значение чекбокса и явно преобразуем в boolean
+        const isActive = document.getElementById('editUserStatus').checked === true;
+
+        // Для отладки
+        console.log("Status checkbox value:", isActive);
+
         // Validate required fields
         if (!username || !email || !phone) {
             showAlert('error', 'Please fill all required fields');
@@ -1271,39 +1287,53 @@
         updateBtn.innerHTML = '<span class="loading-spinner"></span> Updating...';
         updateBtn.classList.add('btn-loading');
 
+        // Убедимся, что online всегда имеет значение true или false, а не null
         const userData = {
             username: username,
             email: email,
             phone: phone,
-            vehicleNumber: vehicleNumber
+            vehicleNumber: vehicleNumber,
+            online: isActive // Отправляем boolean значение
         };
+
+        // Для отладки
+        console.log("Sending data to server:", JSON.stringify(userData));
 
         // Send update request to the server
         request({
-            url: `/admin/operator/${userId}/update-info`,
+            url: `/admin/delivery/${userId}/update-info`,
             method: 'PUT',
-            data: userData
+            data: userData,
+            headers: {
+                'Content-Type': 'application/json'
+            }
         })
             .then((res) => {
+                console.log("Server response:", res);
+
                 const userIndex = users.findIndex(u => u.id === parseInt(userId));
                 if (userIndex !== -1) {
                     users[userIndex].username = username;
                     users[userIndex].email = email;
                     users[userIndex].phone = phone;
                     users[userIndex].vehicleNumber = vehicleNumber;
-
-                    // Update filtered users as well
-                    const filteredIndex = filteredUsers.findIndex(u => u.id === parseInt(userId));
-                    if (filteredIndex !== -1) {
-                        filteredUsers[filteredIndex].username = username;
-                        filteredUsers[filteredIndex].email = email;
-                        filteredUsers[filteredIndex].phone = phone;
-                        filteredUsers[filteredIndex].vehicleNumber = vehicleNumber;
-                    }
-
-                    // Redraw the table with updated data
-                    drawPaginatedUsers();
+                    users[userIndex].isActive = isActive; // Обновляем статус в локальном массиве
+                    users[userIndex].isOnline = isActive; // Обновляем также isOnline для совместимости
                 }
+
+                // Update filtered users as well
+                const filteredIndex = filteredUsers.findIndex(u => u.id === parseInt(userId));
+                if (filteredIndex !== -1) {
+                    filteredUsers[filteredIndex].username = username;
+                    filteredUsers[filteredIndex].email = email;
+                    filteredUsers[filteredIndex].phone = phone;
+                    filteredUsers[filteredIndex].vehicleNumber = vehicleNumber;
+                    filteredUsers[filteredIndex].isActive = isActive; // Обновляем статус в отфильтрованном массиве
+                    filteredUsers[filteredIndex].isOnline = isActive; // Обновляем также isOnline для совместимости
+                }
+
+                // Redraw the table with updated data
+                drawPaginatedUsers();
 
                 // Close the modal
                 const editModal = bootstrap.Modal.getInstance(document.getElementById('editUserModal'));
@@ -1451,37 +1481,27 @@
                 // Calculate progress based on elapsed time
                 const normalizedTime = (elapsed % duration) / duration;
 
-
                 const easeProgress = cubicBezier(0.1, 0.4, 0.7, 0.9, normalizedTime);
-
 
                 const totalDistance = containerWidth + truckWidth + 100; // Add extra distance for smooth transition
                 const currentPosition = -50 + totalDistance * easeProgress;
 
-
                 if (currentPosition > containerWidth) {
-
                     truck.style.left = '-50px';
-
                     startTime = timestamp;
                 } else {
-
                     truck.style.left = currentPosition + 'px';
                 }
-
 
                 animationFrameId = window.requestAnimationFrame(step);
             }
 
-
             animationFrameId = window.requestAnimationFrame(step);
         }
-
 
         function animateTrail() {
             trail.style.animation = 'trailAnimation 0.8s infinite';
         }
-
 
         function cubicBezier(p0, p1, p2, p3, t) {
             const u = 1 - t;
@@ -1502,3 +1522,4 @@
 </script>
 </body>
 </html>
+
