admin pageda customer bo'limi bilan ishlash

--- a/src/main/resources/static/adminpage.html
+++ b/src/main/resources/static/adminpage.html
@@ -523,12 +523,7 @@
                 <li class="nav-item">
                     <a class="nav-link" data-bs-toggle="collapse" href="#customerFeedback" role="button"><i class="bi bi-chat"></i> Customer Inquiries & Feedback</a>
                     <ul class="collapse nav flex-column ms-3" id="customerFeedback">
-                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('order-issues.html')">Orders Issues</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('payment-issues.html')">Payment Issues</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('technical-issues.html')">Technical Issues</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('product-inquiries.html')">Product Inquiries & Complaints</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('suggestions.html')">Suggestions & Feedback</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('delivery-issues.html')">Delivery Issues</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" onclick="loadIframe('inquiry.html')">Suggestions</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
