--- a/src/main/resources/static/store.html
+++ b/src/main/resources/static/store.html
@@ -1214,6 +1214,7 @@
                 <li><a href="store.html">Asosiy</a></li>
                 <li><a href="#">Kategoriyalar</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
+                <li><a href="inquiry.html">Kontakt</a></li>
             </ul>
         </div>
 
